# freya-3d

./: .hgignore  CMakeLists.txt  FreyaICO_Mac.icns  LICENSE  boost-build.jam  eclipse_build.sh  msvc10_generate.bat  msvc9_generate.bat
3party/zlib/: CMakeLists.txt  zlib License.htm
Docs/: Doxyfile  (+2 more)
Framework/: .cproject  .project  CMakeLists.txt  Freya.doxyfile  Jamfile
Framework/3party/: CMakeLists.txt
Framework/3party/cegui/: CMakeLists.txt
Framework/3party/cegui/include/: CEGUIBase.h  CEGUIConfig.h  CEGUIWindowManager.h  CEGUIWindowRendererModule.h
Framework/3party/cegui/src/: CEGUIScheme.cpp  CEGUISystem.cpp
Framework/3party/libpng/: CMakeLists.txt
Framework/Include/: application-settings.h  config.h  core.h  doxygen.h  internal.h  renderer.h  resources.h  windowmanager.h
Framework/Include/camera/: BasicCamera.h
Framework/Include/core/: EStringList.h  EngineCore.h  EngineException.h  EngineSubsystem.h  PluginCore.h  PluginLoader.h  Variable.h
Framework/Include/core/Utils/: FromString.hpp
Framework/Include/core/core/: EString.h  EStringList.h
Framework/Include/framework/: DataNode.h  EmissionObject.h  SceneNode.h  SimulationObject.h  Structures.h  World.h
Framework/Include/images/: TGALoader.h
Framework/Include/math/: Frustum.hpp  MathSubsystem.h  constants.h  frustum.hpp  math.hpp  math_internal.h  matrix2x2.hpp  matrix4x4.hpp  plane.hpp  quaternion.hpp  struct_def.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp
Framework/Include/primitives/: Sphere.h
Framework/Include/renderer/: 3DConstants.h  DriverException.h  RenderingAPIDriver.h
Framework/Include/resources/: Resource.h  ResourceException.h  ResourceManager.h
Framework/Include/scenegraph/: AABB.h  SceneNode.h  ShaderLibrary.h  Structures.h  World.h
Framework/Include/windowmanager/: Callback.h  DisplayMode.h  WMException.h  WindowManagerDriver.h
Framework/Source/: application-settings.cpp  boost_stlport_fix.cpp
Framework/Source/camera/: FlyCamera.cpp  RotateCamera.cpp
Framework/Source/core/: EngineCore.cpp  PluginCore.cpp  PluginCoreInternal.h  PluginLoader.cpp  Variable.cpp  freya_buf.hpp
Framework/Source/framework/: DataNode.cpp  DeclarativeMethods.hpp  FrameworkImpl.cpp  SceneNode.cpp  SceneNodeController.cpp  World.cpp
Framework/Source/images/: TGALoader.cpp
Framework/Source/math/: CMakeList.txt  CMakeLists.txt  MathSubsystem.cpp  math.cpp
Framework/Source/primitives/: Cube.cpp
Framework/Source/renderer/: RenderingAPIFactory.h
Framework/Source/resources/: Resource.cpp  ResourceFactory.cpp  ResourceFactory.h  ResourceLibrary.cpp  ResourceLibrary.h  ResourceManager.cpp
Framework/Source/scenegraph/: SceneGraphImpl.cpp  SceneNode.cpp  ShaderLibrary.cpp  StaticGeometryNode.cpp  VBOData.cpp  World.cpp
Framework/Source/windowmanager/: MouseButtonsNames.cpp  WMException.cpp  WindowManagerFactory.cpp
Freya/Framework/: CMakeLists.txt  Freya.doxyfile  LICENCE
Freya/Framework/Include/: application-settings.h  config.h  core.h  freya.h  internal.h  resources.h  windowmanager.h
Freya/Framework/Source/: application-settings.cpp
Freya/Tests/BumpMapping/: BumpMapping.layout  CMakeLists.txt  Demo.lua  main.cpp
Freya/Tests/WorldTest/: CMakeLists.txt  WorldTest.layout  main.cpp
FreyaCore/: CMakeLists.txt
FreyaCore/Include/: FreyaCoreInternal.h  doxygen.h  freya_config.h  internal.h
FreyaCore/Include/camera/: FlyCamera.h
FreyaCore/Include/core/: EString.h
FreyaCore/Include/math/: matrix3x3.hpp
FreyaCore/Include/renderer/: RenderingAPIDriverID.h
FreyaCore/Include/resources/: ResourceManagerDriver.h
FreyaCore/Include/scenegraph/: SceneNodeController.h  StaticGeometryNode.h
FreyaCore/Include/windowmanager/: WMException.h  WindowFormat.h
FreyaCore/Source/core/: EngineCore.cpp  PluginCoreInternal.h  PluginLoader.cpp
FreyaCore/Source/math/: CMakeLists.txt
FreyaCore/Source/renderer/: RenderingAPIFactory.cpp
FreyaCore/Source/resources/: Resource.cpp  ResourceLibrary.cpp
FreyaCore/Source/windowmanager/: WindowManagerFactory.h
FreyaReflect/: CMakeLists.txt
FreyaReflect/Include/: FreyaReflectInternal.h
FreyaReflect/Include/reflect/: Class.h  Method.h  Namespace.h  Property.h  ReflectionConsumer.h  ReflectionDatabase.h  ReflectionModule.h  ReflectionObject.h  Scope.h  Value.h  reflect_cast.h
FreyaReflect/Source/: Class.cpp  Method.cpp  Namespace.cpp  Property.cpp  ReflectionDatabase.cpp  ReflectionModule.cpp  ReflectionObject.cpp  Scope.cpp  Value.cpp
FreyaSupport/: CMakeLists.txt
FreyaSupport/Include/: FreyaSupportInternal.h  integer.h
FreyaSupport/Include/atomic/: atomic-interface.h  atomic.h  memory_order.h
FreyaSupport/Include/containers/: PoliciesInc.cmake  Unordered.cmake  VectorInc.cmake  hash_map.h  hash_set.h  iterator.h  type_utils.h  utils.h  vector.h
FreyaSupport/Include/core/: Log.h  Object.h  RefCounted.h  RefCountedBase.h  smart_ptr.h  string.h
FreyaSupport/Include/date_time/: TimeUnit.h  date_time_string.h  system_clock.h
FreyaSupport/Source/containers/: hashtable.cpp
FreyaSupport/Source/core/: Log.cpp  string.cpp
Tests/BumpMapping/: CMakeLists.txt  main.cpp
Tests/BumpMapping/Shaders/: bump.vert
Tests/ResourcesTest/: .cproject  .project  Base.7z  CMakeLists.txt  Jamfile  main.cpp
Tests/VDataViewer/: CMakeLists.txt
Tests/VDataViewer/Scripts/: Startup.lua
Tests/containers/: CMakeLists.txt  hashmap_perf.cpp  hashmap_test.cpp  hashset_test.cpp  hashtable_test.cpp  vector.cpp
Tests/core/multithreading/: CMakeLists.txt  cond_sync_test.cpp  test.cpp  thread_test.cpp
Tests/reflect/: CMakeLists.txt  reflection_test.cpp  reflection_test.h  reflection_test_dll.cpp  reflection_test_static.cpp
Toolkit/Converters/3DAssetConverter/: CMakeLists.txt
Toolkit/Converters/ColladaConverter/: CMakeLists.txt  colladaconverter.list
Toolkit/FreyaReflect/: CMakeLists.txt  msvc10_generate.bat
Toolkit/FreyaReflect/CMakeModules/: FindClangFrontend.cmake
Toolkit/FreyaReflect/Driver/: CMakeLists.txt  driver.cpp  version.h
Toolkit/FreyaReflect/FreyaToLua/: CMakeLists.txt  main.cpp
Toolkit/FreyaReflect/Lib/: CMakeLists.txt
(+1657 files in other folders)
